<resources>
    <string name="app_name">Bulletin board</string>
    <!-- Menu Strings -->
    <string name="ad_category">Объвления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_account">Аккаунт</string>
    <string name="ad_sign_up">Регистрация</string>
    <string name="ad_sign_in">Вход</string>
    <string name="ad_sign_out">Выход</string>
    <string name="email">alex178@mail.ru</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ava_image">Ava Image</string>
</resources>